--- a/index.html
+++ b/index.html
@@ -3,160 +3,122 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Daily Notes</title>
+  <title>❕ Thinking</title>
+  <link rel="stylesheet" href="style.css" />
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-
     body {
       font-family: "Poppins", sans-serif;
-      background-color: #fafafa;
+      background-color: #fff6f8;
       margin: 0;
       padding: 0;
       color: #333;
-      line-height: 1.7;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
     header {
-      background-color: #ffe4e1;
-      color: #333;
+      background: linear-gradient(135deg, #ffe4e1, #ffd6d6);
       text-align: center;
-      padding: 2rem 1rem;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      padding: 4rem 1rem 2rem;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
     }
 
     header h1 {
+      font-size: 2.5rem;
       margin: 0;
-      font-size: 2rem;
+      color: #333;
     }
 
     header p {
       font-style: italic;
       color: #555;
+      margin-top: 0.5rem;
     }
 
     main {
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 0 1rem;
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      text-align: center;
+      padding: 2rem 1rem;
     }
 
-    article {
+    .intro {
+      max-width: 600px;
       background: white;
-      border-radius: 10px;
-      padding: 1.5rem;
-      margin-bottom: 2rem;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      border-radius: 20px;
+      padding: 2rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
     }
 
-    article h2 {
+    .intro h2 {
       color: #444;
-      margin-top: 0;
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
     }
 
-    article time {
-      font-size: 0.9rem;
-      color: #888;
-    }
-
-    blockquote {
-      border-left: 4px solid #ff9a9e;
-      padding-left: 1rem;
+    .intro p {
       color: #666;
-      font-style: italic;
-      margin: 1rem 0;
+      line-height: 1.7;
+      margin-bottom: 2rem;
+    }
+
+    .btn {
+      display: inline-block;
+      background-color: #ff6f61;
+      color: white;
+      padding: 0.8rem 1.6rem;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: 500;
+      transition: all 0.3s ease;
+    }
+
+    .btn:hover {
+      background-color: #ff8b7b;
+      transform: scale(1.05);
     }
 
     footer {
       text-align: center;
       padding: 1.5rem;
+      font-size: 0.9rem;
+      color: #666;
       background: #ffe4e1;
-      color: #444;
-      font-size: 0.9rem;
     }
 
-    nav {
-      margin-top: 2rem;
-      text-align: center;
-    }
-
-    nav a {
+    footer a {
+      color: #ff6f61;
       text-decoration: none;
-      color: #ff6f61;
-      margin: 0 10px;
-      font-weight: 500;
-      transition: color 0.3s;
     }
 
-    nav a:hover {
+    footer a:hover {
       text-decoration: underline;
-    }
-
-    .kategori {
-      text-align: center;
-      margin: 2rem 0;
-    }
-
-    .kategori span {
-      background: #fff;
-      color: #ff6f61;
-      border: 1px solid #ff6f61;
-      border-radius: 20px;
-      padding: 0.4rem 1rem;
-      margin: 0.3rem;
-      display: inline-block;
-      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>❕️Thinking</h1>
+    <h1>❕ Thinking</h1>
     <p>Awan Pemikiranku.</p>
   </header>
 
   <main>
-    <article>
-      <h2>Minuman memabukkan 🍷</h2>
-      <time>📅 17 Oktober 2025</time>
+    <div class="intro">
+      <h2>Selamat datang di Alin space☁️</h2>
       <p>
-        Di sebuah bar yang cukup ramai, ada satu minuman paling memabukkan. 
-        saking memabukannya, orang yang minum sampai lupa diri dan membengkokan hak-hak orang yang memberikan wine mahal itu kepadanya. 
-        Sampai mulutnya kelu, dia tidak bisa lagi menjadi mulut orang bisu. 
-        Sampai tangannya lumpuh untuk mengambil keputusan secara adil. 
-        Bahkan sampai ia mabuk dan menindas orang yang memberikan wine itu kepadanya. 
-        Tapi ini bukan tentang wine di sebuah bar.
+        Ini adalah tempat di mana setiap pemikiran, renungan, dan refleksi kecil dan beberapa games menyenangkan tersimpan.  
+        Sebuah ruang seru-seruan.
       </p>
-      <blockquote>“minuman memabukkan -kuasa.”</blockquote>
-    </article>
-
-    <article>
-      <h2>Which one will you choose??</h2>
-      <time>📅 10 Oktober 2025</time>
-      <p>
-        Kalau kalian menjadi tokoh utama dalam sebuah kisah penuh plot twist, 
-        dan kalian tahu bahwa ceritanya happy ending — pokoknya ending paling membahagiakan dan paling adil yang pernah ada — 
-        tapi kalian merasa bahwa selama kisah berlangsung terasa sulit. 
-        Hal paling buruk akan terjadi jika kamu mengikuti rules yang ditentukan oleh Penulis tapi berakhir dengan bahagia. 
-        Kamu punya pilihan: kalau tidak mengikuti rules tersebut maka alur ceritanya akan lebih ringan dan bisa jadi lebih bahagia. 
-        Tapi kamu tidak tahu bagaimana kisah itu akan berakhir — bisa jadi akan berakhir dengan ending paling buruk. 
-        Apa yang kalian pilih?.
-      </p>
-    </article>
-
-    <div class="kategori">
-      <span>✍️ Catatan Pribadi</span>
-      <span>💡 Pemikiran</span>
+      <a href="notes.html" class="btn">📔 Lihat Catatan</a>
     </div>
-
-    <nav>
-      <a href="#">Beranda</a>
-      <a href="#">Tentang Saya</a>
-      <a href="#">Kontak</a>
-    </nav>
   </main>
 
   <footer>
-    <p>&copy; 2025 all-in-M. Semua hak dilindungi.</p>
+    <p>&copy; 2025 all-in-M. Dibuat dengan 🫰🎶 dan sedikit <a href="#">pikiran berantakan</a>.</p>
   </footer>
 </body>
-    </html>
+  </html>
