--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>❕ Thinking</title>
+  <title>❕ ALIN's SPACE </title>
   <link rel="stylesheet" href="style.css" />
   <style>
     body {
@@ -102,8 +102,8 @@
 </head>
 <body>
   <header>
-    <h1>❕ Thinking</h1>
-    <p>Awan Pemikiranku.</p>
+    <h1>❕ Thoughts </h1>
+    <p>Hidden Room - Library.</p>
   </header>
 
   <main>
