--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 </head>
 <body>
   <header>
-    <h1>❕ Thoughts </h1>
-    <p>Hidden Room - Library.</p>
+    <h1>💫 Welcome to Alin's Space 💫 </h1>
+    <p> Thoughts - Library.</p>
   </header>
 
   <main>
@@ -113,7 +113,7 @@
         Ini adalah tempat di mana setiap pemikiran, renungan, dan games menyenangkan tersimpan.  
         Sebuah ruang seru-seruan
       </p>
-      <a href="notes.html" class="btn">📔 Lihat Catatan</a>
+      <a href="catatan.html" class="btn">📔 Lihat Catatan</a>
     </div>
   </main>
 
