--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         Sebuah ruang seru-seruan
       </p>
       <a href="catatan.html" class="btn">📔 Lihat Catatan</a>
+       <a href="games.html" class="btn">📖 Games Alkitab</a>
     </div>
   </main>
 
