--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <a href="catatan.html" class="btn">📔 Lihat Catatan</a>
       <p>  
       </p>
-       <a href="games.html" class="btn">📖 Games Alkitab</a>
+       <a href="games/Utamagem.html" class="btn">📖 Games Alkitab</a>
     </div>
   </main>
 
