--- a/games/Utamagem.html
+++ b/games/Utamagem.html
@@ -57,7 +57,7 @@
 
   <main class="games-list">
     <div class="game-card">
-      <h2><a href="investigasi.html">🕵️ Investigasi Alkitab</a></h2>
+      <h2><a href="games/investigasi.html">🕵️ Investigasi Alkitab</a></h2>
       <p>Uji kemampuanmu menyelidiki kisah-kisah Alkitab.</p>
     </div>
 
