--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 </head>
 <body>
   <header>
-    <h1>💫 Welcome to Alin's Space 💫 </h1>
+    <h1>💫 Alin's Space 💫 </h1>
     <p> Thoughts - Library.</p>
   </header>
 
