--- a/games/Utamagem.html
+++ b/games/Utamagem.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="game-card">
-      <h2><a href="siapakah-aku.html">❓ Siapakah Aku?</a></h2>
+      <h2><a href="games/siapakahaku.html">❓ Siapakah Aku?</a></h2>
       <p>Tebak tokoh-tokoh Alkitab berdasarkan petunjuk-petunjuk seru.</p>
     </div>
 
