--- a/games/Utamagem.html
+++ b/games/Utamagem.html
@@ -57,12 +57,12 @@
 
   <main class="games-list">
     <div class="game-card">
-      <h2><a href="games/investigasi.html">🕵️ Investigasi Alkitab</a></h2>
+      <h2><a href="investigasi.html">🕵️ Investigasi Alkitab</a></h2>
       <p>Uji kemampuanmu menyelidiki kisah-kisah Alkitab.</p>
     </div>
 
     <div class="game-card">
-      <h2><a href="games/siapakahaku.html">❓ Siapakah Aku?</a></h2>
+      <h2><a href="siapakahaku.html">❓ Siapakah Aku?</a></h2>
       <p>Tebak tokoh-tokoh Alkitab berdasarkan petunjuk-petunjuk seru.</p>
     </div>
 
