--- a/games/siapakahaku.html
+++ b/games/siapakahaku.html
@@ -159,7 +159,7 @@
         🌟 Clue 3: Cahaya
       </div>
       <button onclick="showAnswer(this)">Lihat Jawaban</button>
-      <div class="answer">➡️ Firaun</div>
+      <div class="answer">➡️ Paulus</div>
     </div>
 
     <div class="question-card">
@@ -170,7 +170,7 @@
         😢 Clue 3: Tangisan
       </div>
       <button onclick="showAnswer(this)">Lihat Jawaban</button>
-      <div class="answer">➡️ Harun</div>
+      <div class="answer">➡️ Samuel</div>
     </div>
 
     <div class="question-card">
@@ -192,7 +192,7 @@
         👕 Clue 3: Jubah
       </div>
       <button onclick="showAnswer(this)">Lihat Jawaban</button>
-      <div class="answer">➡️ Musa</div>
+      <div class="answer">➡️ Yusuf</div>
     </div>
 
     <div class="question-card">
