--- a/catatan.html
+++ b/catatan.html
@@ -3,33 +3,247 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Daily Notes 📝</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Thoughts — Catatan Kecilku</title>
+  <style>
+    body {
+      font-family: "Poppins", sans-serif;
+      background: linear-gradient(180deg, #f4f8fa, #eaf1f3);
+      color: #333;
+      margin: 0;
+      padding: 0;
+      line-height: 1.7;
+      transition: background 0.4s ease, color 0.4s ease;
+    }
+
+    header {
+      background: linear-gradient(135deg, #90AFC5, #75AAB8);
+      text-align: center;
+      padding: 3rem 1rem 2rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      color: #fff;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.3rem;
+      letter-spacing: 1px;
+    }
+
+    header p {
+      color: #eaf1f3;
+      font-style: italic;
+      margin-top: 0.7rem;
+    }
+
+    main {
+      max-width: 820px;
+      margin: 3rem auto;
+      padding: 0 1rem;
+    }
+
+    article {
+      background: #ffffff;
+      border-radius: 16px;
+      padding: 2rem;
+      margin-bottom: 2.5rem;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    article:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.12);
+    }
+
+    article h2 {
+      color: #3a4e57;
+      margin-top: 0;
+      font-size: 1.5rem;
+    }
+
+    article time {
+      display: block;
+      font-size: 0.9rem;
+      color: #7a8b94;
+      margin-bottom: 1.2rem;
+    }
+
+    article p {
+      text-align: justify;
+      margin-bottom: 1.2rem;
+    }
+
+    blockquote {
+      border-left: 4px solid #75AAB8;
+      background: rgba(144, 175, 197, 0.1);
+      padding: 1rem 1.2rem;
+      color: #4b5a63;
+      font-style: italic;
+      border-radius: 0 10px 10px 0;
+      margin: 1.5rem 0;
+    }
+
+    /* My Thought box */
+    .thought-box {
+      margin-top: 2rem;
+      padding: 1.3rem 1.5rem;
+      background: linear-gradient(135deg, rgba(144,175,197,0.8), rgba(117,170,184,0.7));
+      border-radius: 15px;
+      color: #fff;
+      backdrop-filter: blur(6px);
+      box-shadow: 0 4px 15px rgba(117,170,184,0.3);
+    }
+
+    .thought-box h3 {
+      margin-top: 0;
+      font-weight: 600;
+      font-size: 1.1rem;
+      letter-spacing: 0.5px;
+    }
+
+    .thought-box p {
+      margin: 0.4rem 0 0;
+      font-style: italic;
+      font-size: 0.95rem;
+    }
+
+    nav {
+      text-align: center;
+      margin-top: 2rem;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #75AAB8;
+      margin: 0 12px;
+      font-weight: 500;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover {
+      color: #90AFC5;
+      text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      background: linear-gradient(135deg, #90AFC5, #75AAB8);
+      padding: 1.5rem;
+      color: #f8f9fa;
+      font-size: 0.9rem;
+      margin-top: 3rem;
+    }
+
+    /* Dark Mode */
+    @media (prefers-color-scheme: dark) {
+      body {
+        background: linear-gradient(180deg, #1e1f22, #2a2d31);
+        color: #eaeaea;
+      }
+
+      header {
+        background: linear-gradient(135deg, #3b5564, #2d4a55);
+        box-shadow: 0 2px 10px rgba(0,0,0,0.4);
+      }
+
+      article {
+        background: #2c3136;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      }
+
+      blockquote {
+        background: rgba(144,175,197,0.1);
+        border-left-color: #75AAB8;
+        color: #cfd6db;
+      }
+
+      .thought-box {
+        background: linear-gradient(135deg, rgba(117,170,184,0.25), rgba(117,170,184,0.15));
+        box-shadow: 0 3px 10px rgba(0,0,0,0.5);
+      }
+
+      footer {
+        background: linear-gradient(135deg, #2d4a55, #3b5564);
+        color: #dcdcdc;
+      }
+
+      nav a {
+        color: #90AFC5;
+      }
+
+      nav a:hover {
+        color: #a8c4d3;
+      }
+    }
+
+    /* Smooth fade-in effect */
+    body {
+      animation: fadeIn 0.8s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from {opacity: 0; transform: translateY(10px);}
+      to {opacity: 1; transform: translateY(0);}
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h1>🌤️ Daily Notes</h1>
-    <p>Kumpulan catatan dan pemikiran all-in-M.</p>
+    <h1>🩵 Thoughts</h1>
+    <p>Catatan kecil dari awan pikiranku.</p>
   </header>
 
   <main>
-    <section class="notes-list">
-      <article>
-        <h2><a href="notes/2025-10-17.html">Minuman memabukkan 🍷</a></h2>
-        <time>17 Oktober 2025</time>
-        <p>Catatan tentang kuasa dan mabuknya manusia dalam kekuasaan...</p>
-      </article>
+    <article>
+      <h2>Which One Will You Choose?</h2>
+      <time>📅 10 Oktober 2025</time>
+      <p>
+        Kalau kalian menjadi tokoh utama dalam sebuah kisah penuh plot twist, dan kalian tahu bahwa ceritanya
+        happy ending — pokoknya ending paling membahagiakan dan paling adil yang pernah ada — tapi kalian merasa
+        bahwa selama kisah berlangsung terasa sulit. Hal paling buruk akan terjadi jika kamu mengikuti rules yang
+        ditentukan oleh Penulis, tapi berakhir dengan bahagia. Kamu punya pilihan: kalau tidak mengikuti rules
+        tersebut maka alur ceritanya akan lebih ringan dan bisa jadi lebih bahagia. Tapi kamu tidak tahu bagaimana
+        kisah itu akan berakhir — bisa jadi akan berakhir dengan ending paling buruk.
+      </p>
+      <blockquote>
+        Apa yang akan kamu pilih?
+      </blockquote>
 
-      <article>
-        <h2><a href="notes/2025-10-10.html">Which one will you choose??</a></h2>
-        <time>10 Oktober 2025</time>
-        <p>Pilihan antara takdir yang berat namun pasti bahagia, atau...</p>
-      </article>
-    </section>
+      <div class="thought-box">
+        <h3>🫧 My Thought</h3>
+        <p>Terkadang pilihan yang sulit justru membawa kita ke hasil terbaik — asal kita tetap percaya pada Penulis cerita kita.</p>
+      </div>
+    </article>
+
+    <article>
+      <h2>Minuman Memabukkan 🍷</h2>
+      <time>📅 17 Oktober 2025</time>
+      <p>
+        Di sebuah bar yang cukup ramai, ada satu minuman paling memabukkan. Saking memabukkannya, orang yang minum
+        sampai lupa diri dan membengkokkan hak-hak orang yang memberikan wine mahal itu kepadanya. Sampai mulutnya
+        kelu — dia tidak bisa lagi menjadi mulut orang bisu. Sampai tangannya lumpuh untuk mengambil keputusan
+        secara adil. Bahkan sampai ia mabuk dan menindas orang yang memberikan wine itu kepadanya.
+      </p>
+      <blockquote>
+        Tapi ini bukan tentang wine di sebuah bar.<br />
+        “Minuman memabukkan — kuasa.”
+      </blockquote>
+
+      <div class="thought-box">
+        <h3>💭 My Thought</h3>
+        <p>Kuasa tanpa kendali bisa memabukkan hati. Bahkan kebaikan pun bisa terdistorsi ketika kita terlalu menikmatinya.</p>
+      </div>
+    </article>
+
+    <nav>
+      <a href="#">Beranda</a>
+      <a href="#">Tentang</a>
+      <a href="#">Kontak</a>
+    </nav>
   </main>
 
   <footer>
-    <p>&copy; 2025 all-in-M — Semua hak dilindungi.</p>
+    <p>&copy; 2025 Thoughts by all-in-M. Dibuat dengan kepala dingin </p>
   </footer>
 </body>
   </html>
