--- a/catatan.html
+++ b/catatan.html
@@ -8,7 +8,7 @@
     body {
       font-family: "Poppins", sans-serif;
       background: linear-gradient(180deg, #f4f8fa, #eaf1f3);
-      color: #333;
+      color: #F4E8C1;
       margin: 0;
       padding: 0;
       line-height: 1.7;
