--- a/games/alkitab-dan-dongeng.html
+++ b/games/alkitab-dan-dongeng.html
@@ -16,7 +16,7 @@
 
     header {
       text-align: center;
-      background: linear-gradient(135deg, #DDE5B6, #BFD8B8);
+      background: linear-gradient(135deg, #FEDCCB, #F3D3B8);
       padding: 2.5rem 1rem;
       border-bottom: 4px solid #8CA6A3;
       box-shadow: 0 3px 10px rgba(0,0,0,0.08);
