--- a/games/Utamagem.html
+++ b/games/Utamagem.html
@@ -65,6 +65,11 @@
       <h2><a href="siapakahaku.html">❓ Siapakah Aku?</a></h2>
       <p>Tebak tokoh-tokoh Alkitab berdasarkan petunjuk-petunjuk seru.</p>
     </div>
+    
+    <div class="game-card">
+      <h2><a href="jigulu.html">🔍 Jigulu Jigulu Alkitab </a></h2>
+      <p>Temukan tokoh dan ceritanya dari petunjuk berirama.</p>
+    </div>
 
     <div class="game-card">
       <h2><a href="alkitab-dan-dongeng.html">📖 Alkitab & Dongeng</a></h2>
