--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
 
     header {
-      background: linear-gradient(135deg, #ffe4e1, #ffd6d6);
+      background: url('Pictures/BG.jpg') center/cover no-repeat ;
       text-align: center;
       padding: 4rem 1rem 2rem;
       box-shadow: 0 2px 10px rgba(0,0,0,0.05);
