--- a/games/jigulu.html
+++ b/games/jigulu.html
@@ -16,7 +16,7 @@
     header {
       text-align: center;
       padding: 2.5rem 1rem;
-      background: linear-gradient(135deg, #b8c0ff, #e2afff);
+      background: linear-gradient(135deg, #b59e7d, #cec1a8);
       color: white;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
@@ -31,7 +31,7 @@
       font-style: italic;
       margin-top: 0.5rem;
       font-size: 1rem;
-      color: #fdfdfd;
+      color: #aaa396;
     }
 
     main {
@@ -117,13 +117,13 @@
 
 <header>
   <h1>🎲 Jigulu Jigulu</h1>
-  <p>Teka-teki Alkitab — Tebak tokoh atau kisah dari petunjuk unik!</p>
+  <p>Teka-teki Alkitab — Tebak tokoh dan kisahnya dari petunjuk berirama</p>
 </header>
 
 <main>
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>1️⃣ Tanggalkan kasut di kaki, tempat kudus engkau berdiri.</h2>
-    <p>👉 Siapa dia yang berdiri di depan pahlawan? (Yosua di depan Malaikat Tuhan)</p>
+    <h2>1️⃣ Tanggalkan kasut di kaki, tempat kudus engkau berdiri. Di depan pahlawan siapakah yang berdiri? </h2>
+    <p>👉 (Yosua di depan Malaikat Tuhan)</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
