--- a/games/jigulu.html
+++ b/games/jigulu.html
@@ -16,7 +16,7 @@
     header {
       text-align: center;
       padding: 2.5rem 1rem;
-      background: linear-gradient(135deg, #b59e7d, #cec1a8);
+      background: linear-gradient(135deg, #b59e7d, #cec1a8) !important;
       color: white;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
