--- a/games/jigulu.html
+++ b/games/jigulu.html
@@ -16,7 +16,7 @@
     header {
       text-align: center;
       padding: 2.5rem 1rem;
-      background: linear-gradient(135deg, #b59e7d, #cec1a8) !important;
+      background: linear-gradient(135deg, #52677d, #67869a) !important;
       color: white;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
@@ -96,7 +96,7 @@
 
     @media (prefers-color-scheme: dark) {
       body {
-        background: linear-gradient(135deg, #1f1f2e, #37375c);
+        background: linear-gradient(135deg, #52667d, #455763);
         color: #eee;
       }
       .question {
@@ -104,7 +104,7 @@
         color: #eee;
       }
       header {
-        background: linear-gradient(135deg, #5c5cff, #c77dff);
+        background: linear-gradient(135deg, #1c2e4a, #2f4156);
       }
       footer {
         background: #2c2c3c;
