--- a/games/jigulu.html
+++ b/games/jigulu.html
@@ -104,7 +104,7 @@
         color: #eee;
       }
       header {
-        background: linear-gradient(135deg, #1c2e4a, #2f4156);
+        background: linear-gradient(135deg, #a6bed1, #a6bed2);
       }
       footer {
         background: #2c2c3c;
@@ -127,72 +127,72 @@
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>2️⃣ Hitung cepat tanpa salah. 32.000 - 22.000 - 9.700 = ...</h2>
-    <p>👉 Mereka yang maju tanpa mengalah: 300 prajurit Gideon!</p>
+    <h2>2️⃣ Hitung cepat tanpa salah. 32.000 - 22.000 - 9.700 = ...? mereka yang maju tanpa mengalah</h2>
+    <p>👉 300 prajurit yang dipilih Tuhan untuk Gideon!</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>3️⃣ Roti jelai bergelinding ke tenda...</h2>
-    <p>👉 Mimpi musuh tentang Gideon — simbol kemenangan kecil yang menggulingkan yang besar.</p>
+    <h2>3️⃣ Roti jelai bergelinding ke tenda, swperti granat menghancurkan seluruh kemah</h2>
+    <p>👉 Mimpi musuh (orang Midian) tentang Gideon</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>4️⃣ Haus dijalan minta air...</h2>
-    <p>👉 Gideon menghukum orang Sukhoth dan Pnuel dengan duri karena tidak menolongnya.</p>
+    <h2>4️⃣ Haus dijalan minta air, dijawab "menang dulu baru dikasih". Tanpa tau nanti, tubuh digaruk dengan duri</h2>
+    <p>👉 Orang Sukot yang tidak memberi minum kepada pasukan Gideon.</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>5️⃣ 30 anak, 30 keledai, 30 kota...</h2>
+    <h2>5️⃣ 30 anak mengendarai kedelai, tiapa anak punya satu kota tidak seorang pun terlewati.</h2>
     <p>👉 Yair, hakim Israel dengan 30 anak laki-laki (Hakim-hakim 10:3–5).</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>6️⃣ Kertas basah, lantai kering...</h2>
-    <p>👉 Tanda dari Gideon dengan bulu domba untuk memastikan panggilannya.</p>
+    <h2>6️⃣ Kertas basah, lantai kering. Lantai basah, kertas kering</h2>
+    <p>👉 Tanda yang diminta Gideon kepada Tuhan untuk memastikan penyertaan Tuhan kepada bangsa israel</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>7️⃣ Bukan dimakan manusia...</h2>
+    <h2>7️⃣ Bukan dimakan manusia, bukan juga dimakan singa. oleh sentuhan tongkat, sup kambing dam roti dilahap si merah </h2>
     <p>👉 Malaikat Tuhan membakar persembahan Gideon dengan tongkatnya.</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>8️⃣ Zaitun, ara, anggur...</h2>
-    <p>👉 Perumpamaan Yotam tentang semak duri — lambang Abimelekh yang jahat.</p>
+    <h2>8️⃣ Zaitun, ara, anggur siapakh yang menguasai hutan? tak satupun dari mereka. semak duri datang dan melenyapkan pohon-pohon itu </h2>
+    <p>👉 Perumpamaan Yotam tentang Abimelekh</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>9️⃣ Air dari bambu kecil...</h2>
-    <p>👉 Tongkat Musa — air keluar dari batu, mukjizat penyediaan Tuhan.</p>
+    <h2>9️⃣ Air dari bambu kecil mampu mengisi toren hingga penuh tanpa terkecuali</h2>
+    <p>👉 Elisa dan janda yang terlilit hutang</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>🔟 Mata sentuh mata, tangan sentuh tangan...</h2>
-    <p>👉 Elisa menghidupkan anak Sunem dengan menelentangkan tubuhnya di atas anak itu.</p>
+    <h2>🔟 Mata sentuh mata, mulut sentuh mulut, tangan diatas tangan. Panas dan bersin.</h2>
+    <p>👉 Elisa menghidupkan anak seorang wanita di Sunem</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>11️⃣ Gesper bagus hanya dipakai sekali...</h2>
-    <p>👉 Simbol janji yang tidak ditepati — gambaran dari Nazar yang dilanggar (misal Simson).</p>
+    <h2>11️⃣ Gesper bagus hanya dipakai sekali, disimpan supaya tidak rusak atau lecek. niat hati mau dipakai lagi, takkan bisa karena sudah lapuk</h2>
+    <p>👉 Simbol kemarahan Tuhan terhadap Yerusalem (Firman kepada Yeremia)</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>12️⃣ 12 potong daging...</h2>
+    <h2>12️⃣ 12 potong daging dibagi, bukan potongan daging ayam ataupun sapi. Oleh karena ini 1 bangsa hampir mati.</h2>
     <p>👉 Lewi memotong tubuh gundiknya dan mengirim ke 12 suku Israel (Hakim-hakim 19).</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>13️⃣ Berbisa, oh bahaya!</h2>
+    <h2>13️⃣ Berbisa, oh bahaya. Tangan digigit, tidak apa-apa. Dia dewa, luar biasa</h2>
     <p>👉 Paulus digigit ular di Malta, tapi tidak mati (Kisah Para Rasul 28).</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>14️⃣ Marmut merah jambu?</h2>
-    <p>👉 Kuda merah jambu (Zakharia) — penglihatan tentang empat kuda dan malaikat.</p>
+    <h2>14️⃣ Marmut merah jambu? bukan ini kuda merah jambu, dengan temannya merah dan putih terpandu</h2>
+    <p>👉 Kuda merah jambu (penglihatan Zakharia)</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>15️⃣ Bukan manisan tapi manis...</h2>
+    <h2>15️⃣ Bukan manisan tapi manis. Manis di mulut tak sama di perut</h2>
     <p>👉 Gulungan kitab yang dimakan oleh Yohanes — manis di mulut, pahit di perut (Wahyu 10:9–10).</p>
   </div>
 </main>
