--- a/games/jigulu.html
+++ b/games/jigulu.html
@@ -104,10 +104,10 @@
         color: #eee;
       }
       header {
-        background: linear-gradient(135deg, #a6bed1, #a6bed2);
+        background: linear-gradient(135deg, #a6bed1, #a6bed2)!important;
       }
       footer {
-        background: #2c2c3c;
+        background: #a6bed1;
         color: #ccc;
       }
     }
