--- a/games/jigulu.html
+++ b/games/jigulu.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: "Poppins", sans-serif;
-      background: linear-gradient(135deg, #f7ede2, #cddafd);
+      background: linear-gradient(135deg, #a6bed1, #a6bed2);
       margin: 0;
       padding: 0;
       color: #333;
@@ -104,10 +104,10 @@
         color: #eee;
       }
       header {
-        background: linear-gradient(135deg, #a6bed1, #a6bed2)!important;
+        background: linear-gradient(135deg, #a6bed1, #a6bed2);
       }
       footer {
-        background: #a6bed1;
+        background: #cddafd;
         color: #ccc;
       }
     }
