--- a/games/jigulu.html
+++ b/games/jigulu.html
@@ -122,77 +122,77 @@
 
 <main>
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>1️⃣ Tanggalkan kasut di kaki, tempat kudus engkau berdiri. Di depan pahlawan siapakah yang berdiri? </h2>
+    <h2>Tanggalkan kasut di kaki, tempat kudus engkau berdiri. Di depan pahlawan siapakah yang berdiri? </h2>
     <p>👉 (Yosua di depan Malaikat Tuhan)</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>2️⃣ Hitung cepat tanpa salah. 32.000 - 22.000 - 9.700 = ...? mereka yang maju tanpa mengalah</h2>
+    <h2>Hitung cepat tanpa salah. 32.000 - 22.000 - 9.700 = ...? mereka yang maju tanpa mengalah</h2>
     <p>👉 300 prajurit yang dipilih Tuhan untuk Gideon!</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>3️⃣ Roti jelai bergelinding ke tenda, swperti granat menghancurkan seluruh kemah</h2>
+    <h2>Roti jelai bergelinding ke tenda, swperti granat menghancurkan seluruh kemah</h2>
     <p>👉 Mimpi musuh (orang Midian) tentang Gideon</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>4️⃣ Haus dijalan minta air, dijawab "menang dulu baru dikasih". Tanpa tau nanti, tubuh digaruk dengan duri</h2>
+    <h2>Haus dijalan minta air, dijawab "menang dulu baru dikasih". Tanpa tau nanti, tubuh digaruk dengan duri</h2>
     <p>👉 Orang Sukot yang tidak memberi minum kepada pasukan Gideon.</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>5️⃣ 30 anak mengendarai kedelai, tiapa anak punya satu kota tidak seorang pun terlewati.</h2>
+    <h2>30 anak mengendarai kedelai, tiapa anak punya satu kota tidak seorang pun terlewati.</h2>
     <p>👉 Yair, hakim Israel dengan 30 anak laki-laki (Hakim-hakim 10:3–5).</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>6️⃣ Kertas basah, lantai kering. Lantai basah, kertas kering</h2>
+    <h2>Kertas basah, lantai kering. Lantai basah, kertas kering</h2>
     <p>👉 Tanda yang diminta Gideon kepada Tuhan untuk memastikan penyertaan Tuhan kepada bangsa israel</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>7️⃣ Bukan dimakan manusia, bukan juga dimakan singa. oleh sentuhan tongkat, sup kambing dam roti dilahap si merah </h2>
+    <h2>Bukan dimakan manusia, bukan juga dimakan singa. oleh sentuhan tongkat, sup kambing dam roti dilahap si merah </h2>
     <p>👉 Malaikat Tuhan membakar persembahan Gideon dengan tongkatnya.</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>8️⃣ Zaitun, ara, anggur siapakh yang menguasai hutan? tak satupun dari mereka. semak duri datang dan melenyapkan pohon-pohon itu </h2>
+    <h2>Zaitun, ara, anggur siapakh yang menguasai hutan? tak satupun dari mereka. semak duri datang dan melenyapkan pohon-pohon itu </h2>
     <p>👉 Perumpamaan Yotam tentang Abimelekh</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>9️⃣ Air dari bambu kecil mampu mengisi toren hingga penuh tanpa terkecuali</h2>
+    <h2>Air dari bambu kecil mampu mengisi toren hingga penuh tanpa terkecuali</h2>
     <p>👉 Elisa dan janda yang terlilit hutang</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>🔟 Mata sentuh mata, mulut sentuh mulut, tangan diatas tangan. Panas dan bersin.</h2>
+    <h2>Mata sentuh mata, mulut sentuh mulut, tangan diatas tangan. Panas dan bersin.</h2>
     <p>👉 Elisa menghidupkan anak seorang wanita di Sunem</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>11️⃣ Gesper bagus hanya dipakai sekali, disimpan supaya tidak rusak atau lecek. niat hati mau dipakai lagi, takkan bisa karena sudah lapuk</h2>
+    <h2>Gesper bagus hanya dipakai sekali, disimpan supaya tidak rusak atau lecek. niat hati mau dipakai lagi, takkan bisa karena sudah lapuk</h2>
     <p>👉 Simbol kemarahan Tuhan terhadap Yerusalem (Firman kepada Yeremia)</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>12️⃣ 12 potong daging dibagi, bukan potongan daging ayam ataupun sapi. Oleh karena ini 1 bangsa hampir mati.</h2>
+    <h2>12 potong daging dibagi, bukan potongan daging ayam ataupun sapi. Oleh karena ini 1 bangsa hampir mati.</h2>
     <p>👉 Lewi memotong tubuh gundiknya dan mengirim ke 12 suku Israel (Hakim-hakim 19).</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>13️⃣ Berbisa, oh bahaya. Tangan digigit, tidak apa-apa. Dia dewa, luar biasa</h2>
+    <h2>Berbisa, oh bahaya. Tangan digigit, tidak apa-apa. Dia dewa, luar biasa</h2>
     <p>👉 Paulus digigit ular di Malta, tapi tidak mati (Kisah Para Rasul 28).</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>14️⃣ Marmut merah jambu? bukan ini kuda merah jambu, dengan temannya merah dan putih terpandu</h2>
+    <h2>Marmut merah jambu? bukan ini kuda merah jambu, dengan temannya merah dan putih terpandu</h2>
     <p>👉 Kuda merah jambu (penglihatan Zakharia)</p>
   </div>
 
   <div class="question" onclick="toggleAnswer(this)">
-    <h2>15️⃣ Bukan manisan tapi manis. Manis di mulut tak sama di perut</h2>
+    <h2>Bukan manisan tapi manis. Manis di mulut tak sama di perut</h2>
     <p>👉 Gulungan kitab yang dimakan oleh Yohanes — manis di mulut, pahit di perut (Wahyu 10:9–10).</p>
   </div>
 </main>
