--- a/games/jigulu.html
+++ b/games/jigulu.html
@@ -97,18 +97,18 @@
     @media (prefers-color-scheme: dark) {
       body {
         background: linear-gradient(135deg, #52667d, #455763);
-        color: #eee;
+        color: #d1e8fc;
       }
       .question {
         background: rgba(50,50,70,0.9);
-        color: #eee;
+        color: #d1e8fc;
       }
       header {
         background: linear-gradient(135deg, #a6bed1, #a6bed2);
       }
       footer {
         background: #cddafd;
-        color: #ccc;
+        color: #52667d;
       }
     }
   </style>
