--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
 
     header {
-      background: linear-gradient(13deg, #8b3c46, #8b3c45);
+      background: linear-gradient(13deg, #f77979, #f77978);
       text-align: center;
       padding: 4rem 1rem 2rem;
       box-shadow: 0 2px 10px rgba(0,0,0,0.05);
