--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>❕ ALIN's SPACE </title>
-  <link rel="stylesheet" href="style.css" />
+  <!-- Tambahkan link font Great Vibes dari Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+
   <style>
     body {
       font-family: "Poppins", sans-serif;
@@ -25,9 +27,12 @@
     }
 
     header h1 {
+      font-family: 'Great Vibes', cursive;
       font-size: 2.5rem;
       margin: 0;
       color: #333;
+      text-shadow: 2px 2px 5px rgba(0,0,0,0.15);
+      letter-spacing: 1px;
     }
 
     header p {
