--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 </head>
 <body>
   <header>
-    <h1>💫 Alin's Space 💫 </h1>
+    <h1>Alin's Space</h1>
     <p> Thoughts - Library.</p>
   </header>
 
