--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
 
     header {
-      background: linear-gradient(13deg, #f77979, #f77978);
+      background: linear-gradient(13deg, #f76a6a, #fb9280, #ffb996, #ffd6b9);
       text-align: center;
       padding: 4rem 1rem 2rem;
       box-shadow: 0 2px 10px rgba(0,0,0,0.05);
@@ -28,7 +28,7 @@
 
     header h1 {
       font-family: 'Great Vibes', cursive;
-      font-size: 2.5rem;
+      font-size: 3rem;
       margin: 0;
       color: #333;
       text-shadow: 2px 2px 5px rgba(0,0,0,0.15);
@@ -37,7 +37,7 @@
 
     header p {
       font-style: italic;
-      color: #555;
+      color: #333;
       margin-top: 0.5rem;
     }
 
@@ -108,14 +108,14 @@
 <body>
   <header>
     <h1>Alin's Space</h1>
-    <p> Thoughts - Library.</p>
+    <p> Repository Ide </p>
   </header>
 
   <main>
     <div class="intro">
       <h2>Selamat datang di Alin's Space ☁️</h2>
       <p>
-        Ini adalah tempat di mana setiap pemikiran, renungan, dan games menyenangkan tersimpan.  
+        Tempat di mana setiap pemikiran, renungan, dan games menyenangkan tersimpan.  
         Sebuah ruang seru-seruan
       </p>
       <a href="catatan.html" class="btn">📔 Lihat Catatan</a>
