--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     header h1 {
       font-family: 'Great Vibes', cursive;
-      font-size: 3rem;
+      font-size: 4.5rem;
       margin: 0;
       color: #333;
       text-shadow: 2px 2px 5px rgba(0,0,0,0.15);
@@ -118,10 +118,10 @@
         Tempat di mana setiap pemikiran, renungan, dan games menyenangkan tersimpan.  
         Sebuah ruang seru-seruan
       </p>
-      <a href="catatan.html" class="btn">📔 Lihat Catatan</a>
+      <a href="catatan.html" class="btn">Catatan kecil</a>
       <p>  
       </p>
-       <a href="games/Utamagem.html" class="btn">📖 Games Alkitab</a>
+       <a href="games/Utamagem.html" class="btn">Games Alkitab</a>
     </div>
   </main>
 
