--- a/games/Utamagem.html
+++ b/games/Utamagem.html
@@ -70,6 +70,11 @@
       <h2><a href="jigulu.html">🔍 Jigulu Jigulu Alkitab </a></h2>
       <p>Temukan tokoh dan ceritanya dari petunjuk berirama.</p>
     </div>
+    
+    <div class="game-card">
+      <h2><a href="bingo.html">🔍 Bingo </a></h2>
+      <p>Selesakan misi kebaikan dan centang kotak bingomu</p>
+    </div>
 
     <div class="game-card">
       <h2><a href="alkitab-dan-dongeng.html">📖 Alkitab & Dongeng</a></h2>
