--- a/games/Utamagem.html
+++ b/games/Utamagem.html
@@ -57,27 +57,27 @@
 
   <main class="games-list">
     <div class="game-card">
-      <h2><a href="investigasi.html">🕵️ Investigasi Alkitab</a></h2>
+      <h2><a href="investigasi.html">Investigasi Alkitab</a></h2>
       <p>Uji kemampuanmu menyelidiki kisah-kisah Alkitab.</p>
     </div>
 
     <div class="game-card">
-      <h2><a href="siapakahaku.html">❓ Siapakah Aku?</a></h2>
+      <h2><a href="siapakahaku.html">Siapakah Aku?</a></h2>
       <p>Tebak tokoh-tokoh Alkitab berdasarkan petunjuk-petunjuk seru.</p>
     </div>
     
     <div class="game-card">
-      <h2><a href="jigulu.html">🔍 Jigulu Jigulu Alkitab </a></h2>
+      <h2><a href="jigulu.html">Jigulu Jigulu Alkitab </a></h2>
       <p>Temukan tokoh dan ceritanya dari petunjuk berirama.</p>
     </div>
     
     <div class="game-card">
-      <h2><a href="bingo.html">🔍 Bingo </a></h2>
+      <h2><a href="bingo.html">Bingo </a></h2>
       <p>Selesakan misi kebaikan dan centang kotak bingomu</p>
     </div>
 
     <div class="game-card">
-      <h2><a href="alkitab-dan-dongeng.html">📖 Alkitab & Dongeng</a></h2>
+      <h2><a href="alkitab-dan-dongeng.html">Alkitab & Dongeng</a></h2>
       <p>Temukankisah di Alkitab dari dongeng.</p>
     </div>
   </main>
