--- a/games/bingo.html
+++ b/games/bingo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bingo — Act of Kindness 4x4</title>
+  <title>Bingo — Act of Kindness</title>
   <style>
     body {
       font-family: "Poppins", sans-serif;
@@ -110,7 +110,7 @@
   </style>
 </head>
 <body>
-  <h1>🌿 Bingo — Act of Kindness 4×4 🌿</h1>
+  <h1> Bingo — Act of Kindness </h1>
   <p>Klik kotak setelah kamu melakukannya!</p>
 
   <div class="grid" id="bingoGrid"></div>
