--- a/catatan.html
+++ b/catatan.html
@@ -195,6 +195,20 @@
 
   <main>
     <article>
+      <h2>Lapangan yang menyesakkan </h2>
+      <time>📅 25 Oktober 2025</time>
+      <p>Ada sebuah lapangan yang sangat bagus luas, sepi dan sedap dipandang. Awalnya tanahnya bersih, rumput hijau memenuhi lapangan dengan rapi dna udara disekitar yang segar. Seiring waktu rumput mulai tumbuh dengan tidak terkendali, bahkan ada rumput liar berduri dan tajam. Setiap hari semakin besar hujan turun rumput liar semakin bertumbuh sedikit demi sedikit hingga lapangan itu mulai padat. Awan diatasnya masih tetap biru, tapi di bawah, akar-akar rumput mulai berbelit  membuat tanah sulit bernafas, suatu hari pemilik lahan datang dan duduk ia merasakan sesak bukan karena dia seorang diri, tapi di lapangan tercintanya itu tidak ada ruang untuk dirinya sendiri. Ia mencoba mencabut rumputnya satu persatu, tapi semakin dia mencoba duri rumput melukai tangannya. Dia teringat seseorang yang bisa merapikan kembali lapangan tercintanya.</p>
+      <blockquote>
+        Lapangan hati yang seperti bom waktu
+      </blockquote>
+
+      <div class="thought-box">
+        <h3>🫧 My Thought</h3>
+        <p>Kadang rasa sebatang kara bukan karena tidak punya siapa-siapa tetapi tidak punya satu siapa yang bisa dengar kata hati kita. Kalau hati sudah sesak an rasanya hampir meledak karena semua tumpukan rumput di lapangan hatimu, datang pada-Nya. Dia selalu ada ditempat yang sama.</p>
+      </div>
+    </article>
+    
+    <article>
       <h2>Which One Will You Choose?</h2>
       <time>📅 10 Oktober 2025</time>
       <p>
